Improve macOS code